Added hero client component

--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,39 @@
   }
 }
 
+.text-gradient {
+  background: linear-gradient(
+    60deg,
+    #8a00ff,
+    #cc00ff,
+    #ff00ff,
+    #cc00ff,
+    #8a00ff,
+    #e52e71,
+    #c40000,
+    #ff0000
+  );
+
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 300% 300%;
+  animation: animationGradient 3s ease alternate infinite;
+}
+
+@keyframes animationGradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 50% 100%;
+  }
+  100% {
+    background-position: 100% 0%;
+  }
+}
+
  
 @layer base {
   * {
